category for gallery

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
@@ -41,7 +41,7 @@
     <button class="btn active">Show All</button>
     @foreach (var item in ListArtCategory)
     {
-        <button class="btn" >@item.Name</button>
+        <button class="btn" data-id="@item.Id">@item.Name</button>
     }
 
 </div>
