update category gallery

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
@@ -38,7 +38,7 @@
     </div>
 </section>
 <div id="myBtnContainer">
-    <button class="btn active">Show All</button>
+    <button class="btn active" data-id="50">Show All</button>
     @foreach (var item in ListArtCategory)
     {
         <button class="btn" data-id="@item.Id">@item.Name</button>
