--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -86,14 +86,14 @@
                                 for (var i = 0; i < smg.length; i++) {
                                     var b = smg[i].description;
                                     var z = cutString(b);
-                                    a +=  `<div class="columnArt">
+                                    a += `<div class="columnArt">
                                             <div class="content">
-                                                <a href="/Index/artworkdetail?id=`+smg[i].id+`" data-lightbox="mygallery"><img src="~/assets/img/artwork/`+smg[i].image+`" alt=""></a>
-                                                <h4>`+smg[i].name+`</h4>
-                                                <b>`+smg[i].artist.name+`</b>
-                                                <h5>$`+smg[i].defautPrice+`</h5>
-                                                <p class="para">`+z+`</p>
-                                                <a href='/Index/artworkdetail?id=`+ smg[i].id+`'>Readmore</a>
+                                                <a href="/Index/artworkdetail?id=`+ smg[i].id + `" data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
+                                                <h4>`+ smg[i].name + `</h4>
+                                                <b>`+ smg[i].artist.name + `</b>
+                                                <h5>$`+ smg[i].defautPrice + `</h5>
+                                                <p class="para">`+ z + `</p>
+                                                <a href='/Index/artworkdetail?id=`+ smg[i].id + `'>Readmore</a>
                                                 <div class="text-center">
                                                     <a href="#0" class="custom-button">Add to Favorites</a>
                                                 </div>
@@ -106,6 +106,37 @@
                             )
                         }
                     })
+                }
+                else {               
+                        $.ajax({
+                            type: 'POST',
+                            url: '@Url.Action("getAllGallery","Index")',
+                            success: function (smg) {
+                                if (smg.length != 0) {
+                                    var a = "";
+                                    for (var i = 0; i < smg.length; i++) {
+                                        var b = smg[i].description;
+                                        var z = cutString(b);
+                                        a += `<div class="columnArt">
+                                            <div class="content">
+                                                <a href="/Index/artworkdetail?id=`+ smg[i].id + `" data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
+                                                <h4>`+ smg[i].name + `</h4>
+                                                <b>`+ smg[i].artist.name + `</b>
+                                                <h5>$`+ smg[i].defautPrice + `</h5>
+                                                <p class="para">`+ z + `</p>
+                                                <a href='/Index/artworkdetail?id=`+ smg[i].id + `'>Readmore</a>
+                                                <div class="text-center">
+                                                    <a href="#0" class="custom-button">Add to Favorites</a>
+                                                </div>
+                                            </div>
+                                        </div>`
+                                    }
+                                }
+                                $("#ourgallery").html(
+                                    a
+                                )
+                            }
+                        })
                 }
 
             })
