--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -81,6 +81,7 @@
                         data: { id: id },
                         dataType: 'json',
                         success: function (smg) {
+                            console.log(smg[0].image);
                             if (smg.length != 0) {
                                 var a = "";
                                 for (var i = 0; i < smg.length; i++) {
@@ -88,7 +89,7 @@
                                     var z = cutString(b);
                                     a += `<div class="columnArt">
                                             <div class="content">
-                                                <a href="/Index/artworkdetail?id=`+ smg[i].id + `" data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
+                                                <a data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
                                                 <h4>`+ smg[i].name + `</h4>
                                                 <b>`+ smg[i].artist.name + `</b>
                                                 <h5>$`+ smg[i].defautPrice + `</h5>
@@ -119,7 +120,7 @@
                                         var z = cutString(b);
                                         a += `<div class="columnArt">
                                             <div class="content">
-                                                <a href="/Index/artworkdetail?id=`+ smg[i].id + `" data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
+                                                <a data-lightbox="mygallery"><img src="~/assets/img/artwork/` + smg[i].image + `" alt=""></a>
                                                 <h4>`+ smg[i].name + `</h4>
                                                 <b>`+ smg[i].artist.name + `</b>
                                                 <h5>$`+ smg[i].defautPrice + `</h5>
