--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -67,6 +67,9 @@
                         <a href="/Index/Gallery">Gallery</a>
                     </li>
                     <li>
+                        <a href="/Index/artwork">For Sale</a>
+                    </li>
+                    <li>
                         <a href="/Index/auction">Auction</a>
                     </li>
                     <li>
